Fixed weather icon bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -117,3 +117,15 @@ p {
   font-weight: 525;
   list-style: none;
 }
+
+.icon {
+  text-align: center;
+  font-size: 28px;
+  font-family: monospace;
+  color: #42a3b8;
+  padding: 0;
+  display: block;
+  position: relative;
+  margin: 0;
+  text-shadow: 1px 1px 1px rgb(0, 0, 0);
+}
