--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,13 @@ body {
 }
 h1 {
   font-family: "Zen Tokyo Zoo", cursive;
-  color: #42a3b8;
-  font-size: 48px;
+  color: #fffbc5;
+  font-size: 50px;
   text-transform: uppercase;
   display: block;
   text-align: center;
   padding: 3px;
-  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  text-shadow: 2px 2px 1px rgb(0, 0, 0);
 }
 h2,
 h3 {
@@ -26,7 +26,7 @@ h2 {
   margin: 0 auto;
 }
 h3 {
-  font-size: 60px;
+  font-size: 55px;
 }
 .app {
   position: relative;
@@ -86,7 +86,7 @@ p {
   width: fit-content;
   border: solid 1px #352020;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px rgb(0, 0, 0);
+  box-shadow: 0px 1px 5px rgb(0, 0, 0);
 }
 .card-one {
   position: relative;
@@ -119,6 +119,5 @@ p {
 }
 
 .icon {
-  max-width: 70px;
   filter: drop-shadow(1px 1px 1px #000);
 }
