--- a/src/styles.css
+++ b/src/styles.css
@@ -34,15 +34,6 @@ h3 {
   display: block;
   margin-bottom: 10px;
 }
-p {
-  font-family: monospace;
-  color: #000000;
-  text-align: center;
-  font-size: 10;
-  display: block;
-  padding: 0px;
-}
-
 .p-footer {
   font-size: 10px;
   font-family: monospace;
@@ -63,16 +54,8 @@ p {
   text-decoration: underline;
   font-weight: 525;
 }
-.para-2 {
-  text-align: center;
-  filter: drop-shadow(1px 1px 1px #000);
-}
-.para-3 {
-  margin: 0 auto;
-  text-align: center;
-}
+.card-one,
 .card-two {
-  background-color: #f7e6cc;
   text-align: center;
   display: block;
   margin: 0 auto;
@@ -84,15 +67,11 @@ p {
 .card-one {
   position: relative;
   padding: 30px;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
   margin-top: 50px;
-  width: fit-content;
   background-color: #f7ddb4;
-  border: solid 1px #352020;
-  border-radius: 5px;
-  box-shadow: 0px 1px 5px rgb(0, 0, 0);
+}
+.card-two {
+  background-color: #f7e6cc;
 }
 .links {
   color: #fff;
